--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
       <div class="nav-wrapper">
-        <a href="" class="brand-logo"><i class="large material-icons">home</i></a>
+        <a href="" class="brand-logo"><i class="material-icons" style="font-size: 4rem;">home</i></a>
         <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="meetthelab.html">Meet The Lab</a></li>
