--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper container">
         <a href="" class="brand-logo"><i class="material-icons" style="font-size: 4rem;">home</i></a>
         <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
