--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    <nav>
+    <nav class="blue darken-4">
       <div class="nav-wrapper container">
         <a href="" class="brand-logo"><i class="material-icons" style="font-size: 4rem;">home</i></a>
         <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
